[gd_scene load_steps=5 format=4 uid="uid://cubqthql52sj8"]

[ext_resource type="Script" path="res://shared/ui/confirmation_dialog/confirmation_dialog.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dyid5cvbfke20" path="res://shared/assets/frames/frame_panel.png" id="2"]
[ext_resource type="Theme" uid="uid://dhhfdgr1gdgrb" path="res://shared/assets/themes/character_speech_text.theme" id="3"]
[ext_resource type="Theme" uid="uid://d2e4h7vpe74g6" path="res://shared/assets/themes/btn_default.tres" id="4"]

[node name="ConfirmationDialog" type="CanvasLayer"]
layer = 11
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.247059)

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect"]
custom_minimum_size = Vector2(400, 250)
layout_mode = 0
offset_left = 603.0
offset_top = 396.0
offset_right = 1322.0
offset_bottom = 681.0
texture = ExtResource("2")
patch_margin_left = 35
patch_margin_top = 35
patch_margin_right = 35
patch_margin_bottom = 35

[node name="DialogLabel" type="Label" parent="ColorRect/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -319.5
offset_top = 36.0
offset_right = 305.5
offset_bottom = 134.0
grow_horizontal = 2
theme = ExtResource("3")
theme_override_font_sizes/font_size = 32
text = "Are you sure you want to do the thing?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 150.0
offset_right = 704.0
offset_bottom = 261.0
theme_override_constants/separation = 50
alignment = 1

[node name="AcceptButton" type="Button" parent="ColorRect/NinePatchRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("4")
theme_type_variation = &"red"
text = "Accept"

[node name="RejectButton" type="Button" parent="ColorRect/NinePatchRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = ExtResource("4")
text = "Cancel"
